Fixed some spacing issues

--- a/fleming_michael_lab3/css/main.css
+++ b/fleming_michael_lab3/css/main.css
@@ -8,6 +8,8 @@ margin: auto;
 h1 {
 float: left;
 background-color: red;
+font-size: 40px;
+font-family: 'Passero One', cursive;
 }
 
 /*Logo Ends*/
@@ -15,15 +17,19 @@ background-color: red;
 
 .nav {
 background-color: red;
+width: 600px;
 float: right;
 display: block;
 }
 
 ul.nav {
 background-color: blue;
+padding: 0px;
 }
 
 ul.nav li {
+width: 150px;
+float: left;
 background-color: green;
 list-style-type: none;
 }
@@ -31,6 +37,7 @@ list-style-type: none;
 ul.nav li a {
 background-color: orange;
 text-decoration: none;
+border-right: 2px Dashed Black;
 }
 
 /*Navigation ends*/
@@ -39,29 +46,29 @@ text-decoration: none;
 clear: both;
 }
 
-#headpara {
-float: left;
-}
-
 .leftpara {
 width: 520px;
 float: left;
-padding: 0px 10px;
+padding-right: 10px;
 }
 
 #main-content ul#gallery {
+padding-bottom: 0px;
+padding-left: 0px;
+background-color: blue;
 list-style-type: none;
-
+/*width: 100%;*/
 }
 
 #main-content ul#gallery li {
 background-color: red;
-width:33%;
+width: 33%;
 float: left;
 }
 
-#main-content ul#gallery li {
-background-color: blue;
+#main-content ul#gallery li a img{
+padding-right: 0px;
+margin-right: 0px;
 }
 
 h3 {
